--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sanity/client": "^7.13.2",
+    "@sanity/client": "^7.14.1",
     "@sanity/image-url": "^1.2.0",
-    "@sanity/orderable-document-list": "^1.2.2",
+    "@sanity/orderable-document-list": "^1.5.0",
     "@sanity/types": "^5.0.1",
     "@sanity/vision": "^4.22.0",
     "@sanity/visual-editing": "^2.13.7",
@@ -40,8 +40,8 @@
     "lucide-react": "^0.460.0",
     "next": "^15.1.6",
     "next-sanity": "^11.6.12",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -50,10 +50,10 @@
     "react-use-measure": "^2.1.1",
     "redux": "^5.0.1",
     "resend": "^4.1.1",
-    "sanity": "^4.22.0",
-    "sanity-plugin-iframe-pane": "^3.1.6",
-    "sanity-plugin-media": "^3.0.1",
-    "sanity-plugin-simpler-color-input": "^3.0.0",
+    "sanity": "^5.9.0",
+    "sanity-plugin-iframe-pane": "^5.0.6",
+    "sanity-plugin-media": "^4.1.1",
+    "sanity-plugin-simpler-color-input": "^4.0.0",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^2.5.2",
@@ -64,8 +64,8 @@
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^19.2",
+    "@types/react-dom": "^19.2",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
@@ -73,7 +73,7 @@
     "typescript": "^5"
   },
   "overrides": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2"
+    "@types/react": "^19.2",
+    "@types/react-dom": "^19.2"
   }
 }
