--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@next/third-parties": "^15.1.6",
+    "@portabletext/markdown": "^1.1.2",
     "@portabletext/react": "^6.0.0",
     "@portabletext/types": "^4.0.0",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -62,6 +63,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@mdx-js/react": "^3.0.1",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
@@ -69,12 +71,11 @@
     "@types/react-dom": "^19.2",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
+    "gray-matter": "^4.0.3",
+    "next-mdx-remote": "^5.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@mdx-js/react": "^3.0.1",
-    "gray-matter": "^4.0.3",
-    "next-mdx-remote": "^5.0.0"
+    "typescript": "^5"
   },
   "overrides": {
     "@types/react": "^19.2",
