--- a/.github/workflows/validate-frontmatter.yml
+++ b/.github/workflows/validate-frontmatter.yml
@@ -19,3 +19,26 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Run frontmatter parity check
         run: pnpm run validate:frontmatter
+
+      - name: Run image path validation
+        run: pnpm run validate:images
+
+  playwright-e2e:
+    runs-on: ubuntu-latest
+    needs: validate-frontmatter
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Install Playwright browsers
+        run: pnpm run test:e2e:install
+      - name: Run Playwright E2E tests
+        run: pnpm run test:e2e
+        env:
+          CI: true
